# azer2

./: .gitignore  BUILD.gn  azer.h
afx/: BUILD.gn  afx.h
base/: BUILD.gn  align.h  appinit.cc  appinit.h  back_swap.h  build_info.cc  build_info.h  class_creator.h  config_node.cc  config_node.h  construct.h  dynlib.cc  dynlib.h  file_system.cc  file_system.h  file_util.cc  file_util.h  frame_data.cc  frame_data.h  hierarchy_transform.h  image.cc  image.h  image_data.cc  image_data.h  image_load.cc  movable.cc  movable.h  native_file_system.cc  native_file_system.h  render_export.h  render_loop.cc  render_loop.h  repository_node.cc  repository_node.h  res_path.cc  res_path.h  res_path_parser.cc  res_path_parser.h  resource.cc  resource.h  (+9 more)
effect/: BUILD.gn  ambient_effect.h  base_material.h  color_effect.cc  color_effect.h  diffusemap_effect.cc  diffusemap_effect.h  diffusemap_effect_adapter.cc  diffusemap_effect_adapter.h  effect.cc  effect.h  effect_creator.h  effect_params_adapter.cc  effect_params_adapter.h  effect_params_provider.cc  effect_params_provider.h  effectlib.cc  effectlib.h  light.cc  light.h  material.cc  material.h  normalline_effect.cc  normalline_effect.h  overlay.cc  overlay.h  overlay_effect.cc  overlay_effect.h  resource_bundle.cc  resource_bundle.h  shader_closure.cc  shader_closure.h  sky_effect.cc  sky_effect.h  stage_res_container.cc  stage_res_container.h  stage_texture.cc  stage_texture.h  text_billboard_effect.cc  text_billboard_effect.h  (+6 more)
effectgen/: BUILD.gn  README.md  abstract_syntax_tree.h  exception.cc  exception.h  lexer.cc  lexer.h  lexer_tests.cc  parser.h  token.cc  token.h
files/: BUILD.gn  file_content.cc  file_content.h  file_content_cache.h  file_path.cc  file_path.h  file_path_tests.cc  file_system.cc  file_system.h  file_system_tests.cc  file_system_unittest.cc  native_file_system.cc  native_file_system.h  path_tokenizer.cc  path_tokenizer.h  res_path.cc  res_path.h  res_path_normalizer.cc  res_path_normalizer.h  res_path_normalizer_tests.cc  res_path_parser.cc  res_path_parser.h  res_path_parser_tests.cc  res_path_tests.cc  res_path_tokenizer.cc  res_path_tokenizer.h  res_path_tokenizer_tests.cc
math/: BUILD.gn  consts.h  degree.h  degree_unittest.cc  euler.h  float_util.h  glm_util.h  intvec.h  light_model.cc  light_model.h  linear.cc  linear.h  logging.h  math.h  matrix3.h  matrix4.cc  matrix4.h  matrix4_inl.h  matrix4_unittest.cc  normal_util.cc  normal_util.h  plane.cc  plane.h  plane_inl.h  plane_unittest.cc  projection.cc  projection.h  quaternion.cc  quaternion.h  quaternion_inl.h  quaternion_unittest.cc  ray.cc  ray.h  test_util.h  transform.cc  transform.h  transform_unittest.cc  util.h  vector2.h  vector3.cc  (+7 more)
render/: BUILD.gn  app_context.cc  app_context.h  axis_aligned_box.cc  axis_aligned_box.h  blending.cc  blending.h  bounding_volume.cc  bounding_volume.h  bounding_volumn.cc  bounding_volumn.h  camera.cc  camera.h  canvas2d.cc  canvas2d.h  canvas2d_software.cc  canvas2d_software.h  common.cc  common.h  computer_shader.h  context2d.cc  context2d.h  context2d_software.cc  context2d_software.h  create_object_util.cc  create_object_util.h  cullable.h  depth_buffer.cc  depth_buffer.h  device2d.cc  device2d.h  effect.cc  effect.h  effect_creator.h  effect_params_adapter.cc  effect_params_adapter.h  effect_params_provider.cc  effect_params_provider.h  egl.h  entity.cc  (+116 more)
render_queue/: BUILD.gn  effect_params_provider.h  queue_renderer.cc  queue_renderer.h  render_queue.cc  render_queue.h  renderable.h
res/: BUILD.gn  common.grd  hlsllib.grd  reslib.cc  reslib.h
resource/: BUILD.gn  effect_loader.cc  effect_loader.h  geometry_loader.cc  geometry_loader.h  light_loader.cc  light_loader.h  material_loader.cc  material_loader.h  mesh_load_util.cc  mesh_load_util.h  mesh_loader.cc  mesh_loader.h  resource_loader.cc  resource_loader.h  resource_util.cc  resource_util.h  scene_loader.cc  scene_loader.h  variant_resource.h  vertex_desc_loader.cc  vertex_desc_loader.h  xml_util.cc  xml_util.h
resources/: BUILD.gn  content.h  context.cc  context.h  file_content.cc  file_content.h  file_path.cc  file_path.h  file_system.cc  file_system.h  file_system_unittest.cc  geometry_manager.cc  geometry_manager.h  json_util.h  load_util.h  load_util_unittest.cc  material_manager.cc  material_manager.h  mesh.h  native_file_system.cc  native_file_system.h  repository_node.cc  repository_node.h  repository_node_tests.cc  resource_cache.h  resource_context.h  resource_loader.cc  resource_loader.h  resource_manager.cc  resource_manager.h  resource_manager_unittest.cc  scene_manager.cc  scene_manager.h  technique_manager.cc  technique_manager.h
scene/: BUILD.gn  node.cc  node.h  node_observer.h  node_tests.cc  render_env_node.cc  render_env_node.h  render_node.cc  render_node.h  scene.cc  scene.h  scene_creator.cc  scene_creator.h  scene_effect_params_provider.h  scene_environment.cc  scene_environment.h  scene_manager.h  scene_node.cc  scene_node.h  scene_node_data.cc  scene_node_data.h  scene_node_observer.h  scene_node_picking.cc  scene_node_picking.h  scene_node_traverse.cc  scene_node_traverse.h  scene_render.cc  scene_render.h  scene_stage.h  scene_surroundings.cc  scene_surroundings.h  scene_tree_render.cc  scene_tree_render.h  static_scene_mgr.h
ui/: BUILD.gn  azer_2d_device.cc  chromium_env.cc  chromium_env.h  context_factory.cc  context_factory.h  desktop_window_context.cc  desktop_window_context.h  env.cc  event_listener.h  focus_manager_factory.cc  focus_manager_factory.h  fpspanel.cc  fpspanel.h  native_theme.cc  native_theme.h  native_widget.cc  native_widget.h  render_delegate.h  render_loop.cc  render_loop.h  render_subwindow.cc  render_subwindow.h  render_view.cc  render_view.h  render_widget.cc  render_widget.h  render_window.cc  render_window.h  sample_mainframe.cc  sample_mainframe.h  simple_render_window.cc  simple_render_window.h  uienv.cc  uienv.h  update_views.sh  views.h  views_delegate.cc  views_delegate.h  widget_renderer_context.cc  (+7 more)
util/: BUILD.gn  box_object.cc  box_object.h  byte_pack.cc  byte_pack.h  light.h  (+22 more)
(+1838 files in other folders)
