
shared_library("azer") {
  deps = [
    "base",
    "effect",
    "math",
    "render",
#    "render/layers",
    "render:render2d",
    "scene",
  ]

  public_deps = [
    "math",
    "//base",
    "//skia",
    "//ui/events",
    "//ui/events/platform",
    "//ui/events:events_base",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/views",
  ]
}

test("unittests") {
  output_name = "azer_unittests"
  deps = [
    "base:unittests",
    "render:unittests",
    "render/layers:unittests",
    "//base/test:run_all_unittests",
    "//base",
    "//azer",
  ]
}
