import("//testing/test.gni")

shared_library("azer") {
  deps = [
    "base",
    "effect",
    "math",
    "render",
#    "render/layers",
    "render:render2d",
    "scene",
  ]

  public_deps = [
    "math",
    "//base",
    "//skia",
    "//ui/base",
    "//ui/base:ui_data_pack",
    "//ui/events",
    "//ui/events/platform",
    "//ui/events:events_base",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/views",
  ]

  public_configs = [
    "//azer/build/config:azer_code",
    "//build/config/compiler:rtti"
  ]
}

test("unittests") {
  testonly = true
  output_name = "azer_unittests"
  deps = [
    "base:unittests",
    "render:unittests",
    "render/layers:unittests",
    "//base/test:run_all_unittests",
    "//base",
    "//azer",
  ]
}

group("extend") {
  deps = [
    "//azer/ui",
    "//azer/samples",
    "//azer/util/interactive",
    "//azer/util/images",
    "//azer/util/geometry",
  ]
}