
action("build_info_action") {
  gen_dir = rebase_path(target_gen_dir, root_build_dir, ".")
  exec_script("//azer/build/tools/shell/mkdir.py", [gen_dir])
  
  script = "//azer/build/tools/shell/buildinfo.py"
  src_absolute_dir = rebase_path("//")
  outputs = ["$target_gen_dir/build_info.cc"]
  args = [gen_dir, "build_info", src_absolute_dir]
}

static_library("build_info") {
  sources = [
    "$target_gen_dir/build_info.cc",
    "build_info.cc",
    "build_info.h",
  ]
  deps = [":build_info_action"]
}

source_set("appinit") {
  sources = [
    "appinit.cc",
    "appinit.h",
  ]
  deps = ["//base", "//base:i18n"]
}

config("base_config") {
  if (is_win) {
    cflags = ["/wd4819"]
  }
}

config("build_render_config") {
  defines = ["BUILD_AZER_RENDER"]
}

source_set("image_load") {
  sources = ["image_load.cc"]
  deps = ["//base", "//azer/third_party/soil"]
  configs += [":build_render_config"]
}

source_set("base") {
  sources = [
    "align.h",
    "hierarchy_transform.h",
    "movable.h",
    "string.cc",
    "string.h",
    "tree_node.h",
    "image.cc",
    "image.h",
    "file_util.cc",
    "file_util.h",
  ]
  deps = [
    "//base",
    ":image_load",
  ]

  visibility = ["//azer/render"]
  public_configs = [":base_config"]
  configs += [":build_render_config"]
}


