import("//testing/test.gni")

config("build_render_config") {
  defines = ["BUILD_AZER_RENDER"]
}

source_set("base") {
  sources = [
    "align.h",
    "appinit.cc",
    "appinit.h",
    "dynlib.cc",
    "dynlib.h",
    "image.cc",
    "image.h",
    "resource_pack.cc",
    "resource_pack.h",
    "string.cc",
    "string.h",
  ]
  deps = [
    "//base",
    "//base:i18n",
    "//azer/util/xml",
    "//ui/base",
  ]

  visibility = ["//azer"]
  configs += [":build_render_config"]
  configs += ["//azer/build/config:azer_code"]
}
