
source_set("effect") {
  sources = [
    "effect.cc",
    "effect.h",
    "effect_params_adapter.cc",
    "effect_params_adapter.h",
    "effect_params_provider.cc",
    "effect_params_provider.h",
    "light_observer.h",
    "light.cc",
    "light.h",
    "base_material.h"
  ]

  deps = [
    "//azer/math",
    "//base",
    "//ui/events",
    "//ui/events/platform",
    "//ui/events:events_base",
    "//ui/gl",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/views",    
  ]

  configs += ["//azer/build/config:utf8src"]
  configs += ["//azer/base:build_render_config"]
}

static_library("effectlib") {
  sources = [
    "diffusemap_effect.cc",
    "diffusemap_effect.h",
    "effectlib.cc",
    "effectlib.h",
    "material.cc",
    "material.h",
    "resource_bundle.cc",
    "resource_bundle.h",
  ]

  deps = [
    "//azer",
    "shaderlib",
  ]
}

