
source_set("effect") {
  sources = [
    "effect.cc",
    "effect.h",
    "effect_params_adapter.cc",
    "effect_params_adapter.h",
    "effect_params_provider.cc",
    "effect_params_provider.h",
    "light_observer.h",
    "light.cc",
    "light.h",
    "base_material.h"
  ]

  deps = [
    "//azer/math",
    "//base",
    "//ui/events",
    "//ui/events/platform",
    "//ui/events:events_base",
    "//ui/gl",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/views",    
  ]

  configs += ["//azer/build/config:utf8src"]
  configs += ["//azer/base:build_render_config"]
}

static_library("effectlib") {
  sources = [
    "color_effect.cc",
    "color_effect.h",
    "diffusemap_effect.cc",
    "diffusemap_effect.h",
    "diffusemap_effect_adapter.cc",
    "diffusemap_effect_adapter.h",
    "texture_effect.cc",
    "texture_effect.h",
    "texture_effect_adapter.cc",
    "texture_effect_adapter.h",
    "effectlib.cc",
    "effectlib.h",
    "material.cc",
    "material.h",
    "normalline_effect.cc",
    "normalline_effect.h",
    "sky_effect.cc",
    "sky_effect.h",
  ]

  deps = [
    "//azer",
    "shaderlib",
  ]
}

