
source_set("effect") {
  sources = [
    "effect_params_adapter.cc",
    "effect_params_adapter.h",
    "effect_params_provider.cc",
    "effect_params_provider.h",
    "light_observer.h",
    "light.cc",
    "light.h",
    "base_material.h",
  ]

  deps = [
    "//azer/math",
    "//base",
    "//ui/events",
    "//ui/events/platform",
    "//ui/events:events_base",
    "//ui/gl",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/views",    
  ]

  configs += ["//azer/build/config:azer_code",
              "//build/config/compiler:rtti",
              "//azer/base:build_render_config"
              ]
}

static_library("effectlib") {
  sources = [
    "color_effect.cc",
    "color_effect.h",
    "diffusemap_effect.cc",
    "diffusemap_effect.h",
    "effectlib.cc",
    "effectlib.h",
    "material.cc",
    "material.h",
    "normalline_effect.cc",
    "normalline_effect.h",
    "overlay_effect.cc",
    "overlay_effect.h",
    "overlay.cc",
    "overlay.h",
    "sky_effect.cc",
    "sky_effect.h",
    "text_billboard_effect.cc",
    "text_billboard_effect.h",
    "texture_effect.cc",
    "texture_effect.h",
  ]

  deps = [
    "//azer",
    "//azer/res",
    "//azer/util/images",
  ]

  public_configs = ["//azer/build/config:azer_code",
                    "//build/config/compiler:rtti"
                    ]
}

