
source_set("files") {
  sources = [
    "file_content.cc",
    "file_content.h",
    "file_system.cc",
    "file_system.h",
    "native_file_system.cc",
    "native_file_system.h",
    "res_path.cc",
    "res_path.h",
    "res_path_normalizer.cc",
    "res_path_normalizer.h",
    "res_path_tokenizer.cc",
    "res_path_tokenizer.h",
  ]

  deps = ["//base"]
  visibility = ["//azer"]
  configs += ["//azer/base:build_render_config"]
}

static_library("test_support") {
  sources = [
    "test/test_file_system.cc",
    "test/test_file_system.h",
    "test/test_util.cc",
    "test/test_util.h",
  ]
  deps = ["//azer"]
}

source_set("unittests") {
  sources = [
    "file_system_tests.cc",
    "res_path_tests.cc",
    "res_path_normalizer_tests.cc",
    "res_path_tokenizer_tests.cc",
  ]
  visibility = ["//azer:unittests"]
  deps = [
    "//azer",
    "//base",
    ":test_support",
    "//testing/gtest"
  ]
}