
static_library("math") {
  sources = [
    "consts.h",
    "degree.h",
    "euler.h",
    "float_util.h",
    "light_model.cc",
    "light_model.h",
    "logging.h",
    "math.h",
    "matrix4.cc",
    "matrix4.h",
    "matrix4_inl.h",
    "normal_util.cc",
    "normal_util.h",
    "plane.cc",
    "plane.h",
    "plane_inl.h",
    "projection.cc",
    "projection.h",
    "quaternion.cc",
    "quaternion.h",
    "quaternion_inl.h",
    "test_util.h",
    "transform.cc",
    "transform.h",
    "vector2.h",
    "vector3.cc",
    "vector3.h",
    "vector3_inl.h",
    "vector4.cc",
    "vector4.h",
    "vector4_inl.h",
  ]

  deps = ["//base:base"]
}

test("math_unittest") {
  sources = [
    "matrix4_unittest.cc",
    "vector3_unittest.cc",
    "vector4_unittest.cc",
    "degree_unittest.cc",
    "plane_unittest.cc",
    "quaternion_unittest.cc",
    "transform_unittest.cc",
  ]
  deps = [
    "//third_party/glm:glm",
    "//third_party/gtest:gtest",
    "//base:test_main",
    ":math",
  ]
}
