
source_set("render2d") {
  sources = [
    "canvas2d.cc",
    "canvas2d.h",
    "canvas2d_software.cc",
    "canvas2d_software.h",
    "context2d.cc",
    "context2d.h",
    "context2d_software.cc",
    "context2d_software.h",
  ]
  deps = [
   "//skia",
  ]

  configs += ["//azer/build/config:azer_code"]
  configs += ["//azer/base:build_render_config"]
  visibility = ["//azer"]
}

source_set("render") {
  sources = [
    "blending.cc",
    "blending.h",
    "bounding_volumn.cc",
    "bounding_volumn.h",
    "camera.cc",
    "camera.h",
    "common.cc",
    "common.h",
    "depth_buffer.cc",
    "depth_buffer.h",
    "effect.cc",
    "effect.h",
    "entity.cc",
    "entity.h",
    "frame_args.cc",
    "frame_args.h",
    "frustum.cc",
    "frustum.h",
    "gpu_compute_task.cc",
    "gpu_compute_task.h",
    "gpu_resource_view.cc",
    "gpu_resource_view.h",
    "gpu_resource.cc",
    "gpu_resource.h",
    "gpu_buffer.cc",
    "gpu_buffer.h",
    "hierarchy_transform.h",
    "indices_buffer.cc",
    "indices_buffer.h",
    "index_pack.cc",
    "index_pack.h",
    "movable.cc",
    "movable.h",
    "render_system.h",
    "render_system.cc",
    "render_system_loader.cc",
    "render_system_loader.h",
    "render_system_observer.cc",
    "render_system_observer.h",
    "render_target.cc",
    "render_target.h",
    "renderer.cc",
    "shader_closure.cc",
    "shader_closure.h",
    "structured_buffer.cc",
    "structured_buffer.h",
    "transform_holder.cc",
    "transform_holder.h",
    "shader.cc",
    "shader.h",
    "shader_param_table.cc",
    "shader_param_table.h",
    "swap_chain.h",
    "technique.cc",
    "technique.h",
    "texture_view.cc",
    "texture_view.h",
    "texture.cc",
    "texture.h",
    "vertex_buffer.cc",
    "vertex_buffer.h",
    "vertex_layout.cc",
    "vertex_layout.h",
    "vertex_pack.cc",
    "vertex_pack.h",
    "viewport.cc",
    "viewport.h",
  ]

  if (is_win) {
    sources += [
      "surface_win.cc",
    ]
  }

  deps = [
    "//azer/math",
    "//base",
    "//ui/events",
    "//ui/events/platform",
    "//ui/events:events_base",
    "//ui/gl",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/views",    
  ]

  configs += [
    "//azer/build/config:azer_code",
    "//build/config/compiler:rtti",
    "//azer/base:build_render_config",
  ]
  visibility = ["//azer"]
}

source_set("unittests") {
  testonly = true
  sources = [
    "test/camera_unittest.cc",
    "test/frustrum_unittest.cc",
    "test/gpu_constants_table_unittest.cc",
    "test/vertex_data_unittest.cc",
    "test/util.cc",
    "test/util.h",
  ]

  defines = ["AZER_UNITTEST"]
  deps = [
    "//azer/math",
    "//azer/third_party/glm:glm",
    "//testing/gtest",
    "//azer",
  ]

  if (is_win) {deps += ["//azer/render_system/d3d11"]}
  configs += ["//azer/build/config:azer_code"]
  visibility = ["//azer:unittests"]
}
