
source_set("mesh_load_util") {
  sources = [
    "mesh_load_util.cc",
    "mesh_load_util.h",
  ]

  deps = [
    "//azer/third_party/assimp",
    "//skia",
    "//azer",
  ]
}

static_library("resource") {
  sources = [
    "effect_loader.cc",
    "effect_loader.h",
    "light_loader.cc",
    "light_loader.h",
    "material_loader.cc",
    "material_loader.h",
    "mesh_loader.cc",
    "mesh_loader.h",
    "resource_util.cc",
    "resource_util.h",
    "scene_loader.cc",
    "scene_loader.h",
    "vertex_desc_loader.cc",
    "vertex_desc_loader.h",
    "xml_util.cc",
    "xml_util.h",
  ]
  deps = [
    "//base",
    "//azer/effect:effectlib",
    "//azer",
    ":mesh_load_util",
  ]
}


