

source_set("resources") {
  sources = [
    "context.cc",
    "context.h",
    "file_path.cc",
    "file_path.h",
    "file_system.cc",
    "file_system.h",
    "native_file_system.cc",
    "native_file_system.h",
    "repository_node.cc",
    "repository_node.h",
  ]

  deps = ["//base"]
  visibility = ["//azer"]
  configs += ["//azer/base:build_render_config"]
}