

source_set("resources") {
  sources = [
    "context.cc",
    "context.h",
    "file_content.cc",
    "file_content.h",
    "file_path.cc",
    "file_path.h",
    "file_system.cc",
    "file_system.h",
    "native_file_system.cc",
    "native_file_system.h",
    "repository_node.cc",
    "repository_node.h",
  ]

  deps = ["//base"]
  visibility = ["//azer"]
  configs += ["//azer/base:build_render_config"]
}

static_library("test_support") {
  sources = [
    "test/test_util.cc",
    "test/test_util.h",
  ]
  deps = ["//azer"]
}

source_set("unittests") {
  sources = [
    "repository_node_tests.cc",
  ]
  visibility = ["//azer:unittests"]
  deps = [
    "//azer",
    "//base",
    ":test_support",
    "//testing/gtest"
  ]
}