
static_library("ui") {
  sources = [
    "adapter/output_device.cc",
    "adapter/output_device.h",
    "adapter/output_surface.cc",
    "adapter/output_surface.h",
    "adapter/swapchain_context.cc",
    "adapter/swapchain_context.h",
    "adapter/context_factory.cc",
    "adapter/context_factory.h",
    "adapter/util.cc",
    "adapter/util.h",
    "chromium_env.cc",
    "chromium_env.h",
    "desktop_window_context.cc",
    "desktop_window_context.h",
    "focus_manager_factory.cc",
    "focus_manager_factory.h",
    "native_widget.cc",
    "native_widget.h",
    "render_subwindow.cc",
    "render_subwindow.h",
    "render_view.cc",
    "render_view.h",
    "render_loop.cc",
    "render_loop.h",
    "sample_mainframe.cc",
    "sample_mainframe.h",
    "views_delegate.cc",
    "views_delegate.h",
    "window_context.cc",
    "window_context.h",
    "window.cc",
    "window.h",
  ]

  public_deps = [
    "//base:i18n",
    "//ui/views",
    "//azer",
    "//azer/effect:effectlib",
    "//azer/math",
  ]

  deps = [
    "//cc/surfaces",
    "//cc",
    "//gpu",
    "//skia",
    "//ui/aura",
    "//ui/accessibility",
    "//ui/compositor",
    "//ui/native_theme",
    "//ui/wm",
    "//components/tracing",
    "//components/tracing:startup_tracing",
  ]
}