import("//azer/build/templates/afx.gni")


static_library("util") {
  sources = [
    "tile.cc",
    "tile.h",
    "util.h",
    "sampleapp.cc",
    "sampleapp.h",
  ]
  deps = [
    "//azer/render",
    "//azer/math",
    "//ui/gfx",
  ]
}

test("util_unittest") {
  sources = [
    "tile_test.cc",
  ]
  deps = [
    "//azer/render",
    "//testing/gtest",
    "//base/test:run_all_unittests",
    ":util",
  ]
  if (is_win) {deps += ["//azer/render_system/d3d11:d3d11_render_system"]}
}