import("//azer/build/templates/afx.gni")


static_library("util") {
  sources = [
    "tile.cc",
    "tile.h",
    "shader_util.cc",
    "shader_util.h",
  ]
  deps = [
    "//azer",
    "//azer/math",
    "//ui/gfx",
  ]
}

test("util_unittest") {
  sources = [
    "tile_test.cc",
  ]
  deps = [
    "//azer",
    "//testing/gtest",
    "//base/test:run_all_unittests",
    ":util",
  ]
  if (is_win) {deps += ["//azer/render_system/d3d11"]}
}