
source_set("afx_codegen") {
  sources = [
    "afx_codegen.cc",
    "afx_codegen.h",
    "cpp_codegen.cc",
    "cpp_codegen.h",
    "code_generator.cc",
    "code_generator.h",
    "hlsl_util.cc",
    "hlsl_util.h",
    "tex_util.cc",
    "tex_util.h",
    "hlsl_codegen.cc",
    "hlsl_codegen.h",
    "util.cc",
    "util.h",
  ]
  deps = ["//base:base"]
  configs += ["//azer/build/config:utf8src"]
}