
source_set("codegen") {
  sources = [
    "cpp_codegen.cc",
    "cpp_codegen.h",
    "code_generator.cc",
    "code_generator.h",
    "hlsl/afx_codegen.cc",
    "hlsl/afx_codegen.h",
    "hlsl/hlsl_util.cc",
    "hlsl/hlsl_util.h",
    "hlsl/tex_util.cc",
    "hlsl/tex_util.h",
    "hlsl/hlsl_codegen.cc",
    "hlsl/hlsl_codegen.h",
    "util.cc",
    "util.h",
  ]
  deps = ["//base:base"]
  configs += ["//azer/build/config:utf8src"]
}