
source_set("codegen") {
  sources = [
    "afx_codegen.cc",
    "afx_codegen.h",
    "ast_code_generator.cc",
    "ast_code_generator.h",
    "cpp_codegen.cc",
    "cpp_codegen.h",
    "code_format.cc",
    "code_format.h",
    "hlsl/afx_codegen.cc",
    "hlsl/afx_codegen.h",
    "hlsl/ast_codegen.cc",
    "hlsl/ast_codegen.h",
    "hlsl/tex_util.cc",
    "hlsl/tex_util.h",
    "hlsl/util.cc",
    "hlsl/util.h",
    "util.cc",
    "util.h",
  ]
  deps = ["//base:base"]
  configs += ["//azer/build/config:utf8src"]
}