
source_set("linker") {
  sources = [
    "afx_linker.cc",
    "afx_linker.h",
    "afx_parser.cc",
    "afx_parser.h",
    "attribute_name.cc",
    "attribute_name.h",
    "dependency_tree.cc",
    "dependency_tree.h",
    "depend_calactor.cc",
    "depend_calactor.h",
    "program.cc",
    "program.h",
    "technique.h",
    "technique_linker.cc",
    "technique_linker.h",
    "technique_validator.cc",
    "technique_validator.h",
  ]
  deps = ["//base:base"]
  configs += ["//azer/build/config:utf8src"]
}